# CnpjImporter

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/cli/: main.py  main_old.py
src/config/: settings.py
src/core/: csv_reader.py  extracted_batch.py  extraction.py  file_inspector.py  files.py  input_batch.py  normalization.py  normalized_reader.py  persistence.py  required_files_validation.py  unzip.py  validators.py
src/core/dto/: empresas.py  estabelecimentos.py  import_batch_result.py  simples.py  socios.py
src/core/normalizers/: common.py  empresas.py  estabelecimentos.py  simples.py  socios.py
src/core/parsers/: empresas.py  estabelecimentos.py  simples.py  socios.py
src/core/persistence/: __init__.py  empresas_pipeline.py  empresas_service.py  empresas_writer.py  estabelecimentos_pipeline.py  estabelecimentos_writer.py  finalization.py  import_lotes.py  simples_pipeline.py  simples_writer.py  socios_pipeline.py  socios_writer.py
src/db/: connection.py
